Updated Deep Learning

--- a/DL/Lab.ipynb
+++ b/DL/Lab.ipynb
@@ -1116,47 +1116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\R.PRAVEEN KUMAR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 6ms/step - accuracy: 0.8646 - loss: 0.4245 - val_accuracy: 0.9863 - val_loss: 0.0444\n",
-      "Epoch 2/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 8ms/step - accuracy: 0.9763 - loss: 0.0820 - val_accuracy: 0.9909 - val_loss: 0.0287\n",
-      "Epoch 3/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 8ms/step - accuracy: 0.9822 - loss: 0.0591 - val_accuracy: 0.9901 - val_loss: 0.0283\n",
-      "Epoch 4/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 7ms/step - accuracy: 0.9876 - loss: 0.0402 - val_accuracy: 0.9912 - val_loss: 0.0251\n",
-      "Epoch 5/5\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 7ms/step - accuracy: 0.9893 - loss: 0.0351 - val_accuracy: 0.9919 - val_loss: 0.0272\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\smooth.dispatch.cpp:617: error: (-215:Assertion failed) !_src.empty() in function 'cv::GaussianBlur'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 87\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[38;5;66;03m# Example usage\u001b[39;00m\n\u001b[0;32m     86\u001b[0m image_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/content/123png.png\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 87\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRecognized Number:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mrecognize_number\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[25], line 80\u001b[0m, in \u001b[0;36mrecognize_number\u001b[1;34m(image_path)\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrecognize_number\u001b[39m(image_path):\n\u001b[1;32m---> 80\u001b[0m     thresh_img \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     81\u001b[0m     digit_images \u001b[38;5;241m=\u001b[39m extract_digits(thresh_img)\n\u001b[0;32m     82\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m digit_images:\n",
-      "Cell \u001b[1;32mIn[25], line 36\u001b[0m, in \u001b[0;36mpreprocess_image\u001b[1;34m(image_path)\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpreprocess_image\u001b[39m(image_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/123png.png\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     35\u001b[0m     img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(image_path, cv2\u001b[38;5;241m.\u001b[39mIMREAD_GRAYSCALE)\n\u001b[1;32m---> 36\u001b[0m     img \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGaussianBlur\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m     _, thresh \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mthreshold(img, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m255\u001b[39m, cv2\u001b[38;5;241m.\u001b[39mTHRESH_BINARY_INV \u001b[38;5;241m+\u001b[39m cv2\u001b[38;5;241m.\u001b[39mTHRESH_OTSU)\n\u001b[0;32m     38\u001b[0m     kernel \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones((\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m), np\u001b[38;5;241m.\u001b[39muint8)\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\smooth.dispatch.cpp:617: error: (-215:Assertion failed) !_src.empty() in function 'cv::GaussianBlur'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 13. Build a deep learning model for multi digit number recognition\n",
     " \n",
@@ -1249,11 +1211,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Additional "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_datasets as tfds\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D\n",
+    "from tensorflow.keras.applications import VGG16\n",
+    "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
+    "\n",
+    "# Load Flowers dataset from TensorFlow Datasets\n",
+    "train_data, test_data = tfds.load('tf_flowers', split=['train[:80%]', 'train[80%:]'], as_supervised=True)\n",
+    "\n",
+    "# Preprocessing function\n",
+    "def preprocess(image, label):\n",
+    "    image = tf.image.resize(image, (224, 224))  # Resize images to 224x224\n",
+    "    image = preprocess_input(image)  # VGG16 preprocess\n",
+    "    return image, label\n",
+    "\n",
+    "# Apply preprocessing\n",
+    "AUTOTUNE = tf.data.AUTOTUNE\n",
+    "train_ds = train_data.map(preprocess).batch(32).prefetch(AUTOTUNE)\n",
+    "test_ds = test_data.map(preprocess).batch(32).prefetch(AUTOTUNE)\n",
+    "\n",
+    "# Load VGG16 base model (Pretrained on ImageNet)\n",
+    "base_model = VGG16(weights='imagenet', include_top=False, input_shape=(224, 224, 3))\n",
+    "base_model.trainable = True  # Enable fine-tuning\n",
+    "\n",
+    "# Define the model\n",
+    "model = Sequential([\n",
+    "    base_model,\n",
+    "    GlobalAveragePooling2D(),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dense(5, activation='softmax')  # 5 classes for flower classification\n",
+    "])\n",
+    "\n",
+    "# Compile model\n",
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train model\n",
+    "history = model.fit(train_ds, epochs=5, verbose=1)\n",
+    "\n",
+    "# Evaluate on test data\n",
+    "test_loss, test_acc = model.evaluate(test_ds)\n",
+    "print(f\"Test Accuracy: {test_acc:.4f}\")"
+   ]
   }
  ],
  "metadata": {
